fix: add better format for swagger anotations
