# storage/api-docs/api-docs.json
@@ -54,7 +54,7 @@
         "schemas": {
             "FederalEntityResource": {
                 "title": "FederalEntityResource",
-                "description": "Federal entity resource model",
+                "description": "FederalEntity resource model",
                 "properties": {
                     "key": {
                         "title": "key",
@@ -77,7 +77,7 @@
                 },
                 "type": "object",
                 "xml": {
-                    "name": "ZipCodeResource"
+                    "name": "FederalEntityResource"
                 }
             },
             "MunicipalityResource": {
@@ -92,7 +92,7 @@
                     },
                     "name": {
                         "title": "name",
-                        "description": "name of settlement",
+                        "description": "name of municipality",
                         "type": "string",
                         "example": "ALVARO OBREGON"
                     }
@@ -119,7 +119,7 @@
                         "example": "LA OTRA BANDA"
                     },
                     "zone_type": {
-                        "title": "name",
+                        "title": "zone_type",
                         "description": "name of zone type of settlement",
                         "type": "string",
                         "example": "URBANO"
@@ -161,7 +161,7 @@
                     },
                     "locality": {
                         "title": "locality",
-                        "description": "locality name of zip code",
+                        "description": "name of the locality of the zip code",
                         "type": "string",
                         "example": "CIUDAD DE MEXICO"
                     },
